<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp8h"
        android:text="@string/logOut"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
          />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp12h"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/reject_LogOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8h"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/logOutReject"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/accept_LogOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8h"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/logOutAccept"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>