<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="resetPasswordViewModel"
            type="app.laundrystation.viewModels.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8h"
            android:onClick="@{() -> resetPasswordViewModel.back()}"
            android:padding="@dimen/dp8h"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_Laundry_Cat_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8h"
            android:padding="@dimen/dp4h"
            android:text="@string/titleResetPassword"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_validation_OldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp32h"
            android:layout_marginStart="@dimen/dp32h"
            android:layout_marginTop="@dimen/dp6h"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_lock"
            android:gravity="start|center_vertical"
            android:hint="@string/profileOldPassword"
            android:inputType="textPassword"
            android:text="@={resetPasswordViewModel.profileOldPassword}"
            android:textSize="@dimen/sp14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Laundry_Cat_Name"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="?colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_validation_NewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp32h"
            android:layout_marginStart="@dimen/dp32h"
            android:layout_marginTop="@dimen/dp6h"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_lock"
            android:gravity="start|center_vertical"
            android:hint="@string/sign_in_new_password"
            android:inputType="textPassword"
            android:text="@={resetPasswordViewModel.validationNewPassword}"
            android:textSize="@dimen/sp14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_validation_OldPassword"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="?colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_validation_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp32h"
            android:layout_marginStart="@dimen/dp32h"
            android:layout_marginTop="@dimen/dp6h"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_lock"
            android:gravity="start|center_vertical"
            android:hint="@string/sign_in_ConfirmPassword"
            android:inputType="textPassword"
            android:text="@={resetPasswordViewModel.validationConfirmNewPassword}"
            android:textSize="@dimen/sp14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_validation_NewPassword"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="?colorPrimary" />


        <Button
            android:id="@+id/btn_save_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp64h"
            android:layout_marginStart="@dimen/dp64h"
            android:layout_marginTop="@dimen/dp6h"
            android:background="@color/colorAccent"
            android:onClick="@{() -> resetPasswordViewModel.userResetPassword()}"
            android:text="@string/btn_saveCode_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp16"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_validation_ConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>